# lurker-wallet

./: Cargo.toml  JUNK.md
api/: Cargo.toml
api/src/: foreign.rs  foreign_rpc.rs  lib.rs  owner.rs  owner_rpc.rs
api/tests/: slate_versioning.rs
config/: Cargo.toml
config/src/: config.rs  lib.rs  types.rs
controller/: Cargo.toml
controller/src/: command.rs  controller.rs  display.rs  error.rs  lib.rs
controller/tests/: accounts.rs  build_chain.rs  build_output.rs  check.rs  file.rs  invoice.rs  late_lock.rs  mwixnet.rs  no_change.rs  payment_proofs.rs  repost.rs  revert.rs  self_send.rs  slatepack.rs  transaction.rs  ttl_cutoff.rs  tx_list_filter.rs  updater_thread.rs
controller/tests/common/: mod.rs
doc/design/: design.md  wallet-arch.puml
doc/samples/v3_api_node/: readme.md
doc/transaction/: basic-transaction-wf.puml
impls/: Cargo.toml
impls/src/: error.rs  foreign_rpc_impl.rs  lib.rs  owner_rpc_impl.rs  types.rs
impls/src/adapters/: file.rs  http.rs  mod.rs  slatepack.rs
impls/src/client_utils/: client.rs
impls/src/foreign/: mod.rs
impls/src/lifecycle/: default.rs  mod.rs  seed.rs
impls/src/node_clients/: http.rs
impls/src/owner/: mod.rs
impls/src/test_framework/: mod.rs  testclient.rs
impls/src/tor/: bridge.rs  config.rs  proxy.rs
integration/: Cargo.toml
integration/tests/: api.rs  dandelion.rs  framework.rs  simulnet.rs  stratum.rs
libwallet/: Cargo.toml
libwallet/src/: address.rs  error.rs  lib.rs  slate.rs  types.rs
libwallet/src/api_impl/: foreign.rs  owner.rs  owner_updater.rs  types.rs
libwallet/src/internal/: keys.rs  scan.rs  selection.rs  tx.rs  updater.rs
libwallet/src/mwixnet/: types.rs
libwallet/src/mwixnet/onion/: mod.rs  onion.rs  util.rs
libwallet/src/mwixnet/onion/crypto/: comsig.rs  dalek.rs  secp.rs
libwallet/src/slate_versions/: ser.rs  v4.rs  v4_bin.rs
libwallet/src/slatepack/: address.rs  armor.rs  packer.rs  types.rs
libwallet/tests/: libwallet.rs  slate_versioning.rs
lurker-hot-wallet/: Cargo.toml  doc.txt
lurker-hot-wallet/src/: lib.rs
lurker-watch-only/: Cargo.toml  doc.txt
lurker-watch-only/src/: lib.rs
src/: lib.rs
src/cli/: cli.rs  mod.rs  wallet_cli.rs
src/cmd/: wallet.rs  wallet_args.rs  watch.rs
tests/: cmd_line_basic.rs  owner_v3_init_secure.rs  owner_v3_lifecycle.rs  tor_dev_helper.rs
tests/common/: mod.rs
tests/data/v3_reqs/: init_send_tx.req.json
util/: Cargo.toml
util/src/: ov3.rs
wallet_api/src/: owner_rpc.rs
