[package]
name = "grin_wallet"
version = "5.4.0-alpha.1"
authors = ["Grin Developers <mimblewimble@lists.launchpad.net>"]
description = "Simple, private and scalable cryptocurrency implementation based on the MimbleWimble chain format."
license = "Apache-2.0"
repository = "https://github.com/jojapoppa/lurker-wallet"
keywords = [ "crypto", "grin", "mimblewimble", "lurker" ]
readme = "README.md"
exclude = ["**/*.grin", "**/*.grin2"]
build = "src/build/build.rs"
edition = "2018"

[[bin]]
name = "grin-wallet"
path = "src/bin/grin-wallet.rs"

[workspace]
members = ["api", "config", "controller", "impls", "libwallet", "util"]
exclude = ["integration"]

[dependencies]
bincode = "1"
tokio = { version = "1", features = ["full"] }  # Async runtime, net, io
sodiumoxide = "0.2.7"  # Pin to latest; drops ^ for exact match to resolve conflict
yggdrasilctl = { git = "https://github.com/jojapoppa/yggdrasilctl.git", branch = "main", default-features = false, features = ["use_tokio"] }
yggdrasil-keys = "0.4"  # Key derivation (note: hyphen in name, underscore in use)
clap = { version = "2.33", features = ["yaml"] }
hyper = { version = "0.14", features = ["full"] }
rpassword = "4.0"
thiserror = "1"
prettytable-rs = "0.10"
log = "0.4"
linefeed = "0.6"
semver = "0.10"
rustyline = "6"
lazy_static = "1"

grin_wallet_api = { path = "./api", version = "5.4.0-alpha.1" }
grin_wallet_impls = { path = "./impls", version = "5.4.0-alpha.1" }
grin_wallet_libwallet = { path = "./libwallet", version = "5.4.0-alpha.1" }
grin_wallet_controller = { path = "./controller", version = "5.4.0-alpha.1" }
grin_wallet_config = { path = "./config", version = "5.4.0-alpha.1" }
grin_wallet_util = { path = "./util", version = "5.4.0-alpha.1" }

##### Grin Imports

grin_core = { path = "../lurker/core" }
grin_keychain = { path = "../lurker/keychain" }
grin_util = { path = "../lurker/util" }

###### 

[build-dependencies]
built = { version = "0.7", features = ["git2"]}

[dev-dependencies]
url = "2.1"
serde = "1"
serde_derive = "1"
serde_json = "1"
remove_dir_all = "0.7"
easy-jsonrpc-mw = "0.5.4"
