[package]
name = "lurker_wallet_api"
version = "5.4.0-alpha.1"
authors = ["Grin Developers <mimblewimble@lists.launchpad.net>"]
description = "Grin Wallet API"
license = "Apache-2.0"
repository = "https://github.com/mimblewimble/grin-wallet"
keywords = [ "crypto", "grin", "mimblewimble" ]
exclude = ["**/*.grin", "**/*.grin2"]
edition = "2018"

[dependencies]
log = "0.4"
uuid = { version = "0.8", features = ["serde", "v4"] }
serde = "1"
rand = "0.6"
serde_derive = "1"
serde_json = "1"
easy-jsonrpc-mw = { path = "../../lurker/vendor/easy-jsonrpc-mw" }
chrono = { version = "0.4.11", features = ["serde"] }
ring = "0.16"
base64 = "0.12"
ed25519-dalek = "1.0.0-pre.4"

lurker_wallet_libwallet = { path = "../libwallet", version = "5.4.0-alpha.1" }
lurker_wallet_config = { path = "../config", version = "5.4.0-alpha.1" }
lurker_wallet_impls = { path = "../impls", version = "5.4.0-alpha.1" }
lurker_wallet_util = { path = "../util", version = "5.4.0-alpha.1" }

##### Grin Imports

# For Release
lurker_core = { path = "../../lurker/core" }
lurker_keychain = { path = "../../lurker/keychain" }
lurker_util = { path = "../../lurker/util" }

#####

[dev-dependencies]
serde_json = "1"
tempfile = "3.1"
