[package]
name = "lurker_wallet_controller"
version = "5.4.0-alpha.1"
authors = ["Grin Developers <mimblewimble@lists.launchpad.net>"]
description = "Controllers for grin wallet instantiation"
license = "Apache-2.0"
repository = "https://github.com/mimblewimble/grin-wallet"
keywords = [ "crypto", "grin", "mimblewimble" ]
exclude = ["**/*.grin", "**/*.grin2"]
#build = "src/build/build.rs"
edition = "2018"

[dependencies]
futures = "0.3"
hyper = { version = "0.14", features = ["full"] }
async-trait = "0.1"
rand = "0.6.5"
serde = "1"
serde_derive = "1"
serde_json = "1"
log = "0.4"
prettytable-rs = "0.10"
ring = "0.16"
term = "0.6"
tokio = { version = "0.2", features = ["full"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
url = "2.1"
chrono = { version = "0.4.11", features = ["serde"] }
easy-jsonrpc-mw = "0.5.4"
lazy_static = "1"
thiserror = "1"
qr_code = "1.1.0"
bech32 = "0.9"
ed25519-dalek = "1"

api_common = { path = "../../lurker/api_common" }
lurker_wallet_util = { path = "../util", version = "5.4.0-alpha.1" }
lurker_wallet_impls = { path = "../impls", version = "5.4.0-alpha.1" }
lurker_wallet_libwallet = { path = "../libwallet", version = "5.4.0-alpha.1" }
lurker_wallet_config = { path = "../config", version = "5.4.0-alpha.1" }

##### Grin Imports

lurker_core = { path = "../../lurker/core" }
lurker_keychain = { path = "../../lurker/keychain" }
lurker_util = { path = "../../lurker/util" }
lurker_chain = { path = "../../lurker/chain" }

#####

[dev-dependencies]
ed25519-dalek = "1.0.0-pre.4"
remove_dir_all = "0.7"

##### 

