[package]
name = "lurker_wallet_impls"
version = "5.4.0-alpha.1"
authors = ["Grin Developers <mimblewimble@lists.launchpad.net>"]
description = "Concrete types derived from libwallet traits"
license = "Apache-2.0"
repository = "https://github.com/mimblewimble/lurker-wallet"
keywords = [ "crypto", "grin", "mimblewimble" ]
exclude = ["**/*.grin", "**/*.grin2"]
edition = "2018"

[dependencies]
blake2-rfc = "0.2"
thiserror = "1"
futures = "0.3"
rand = "0.6.5"
sled = "0.34"
serde = "1"
serde_derive = "1"
serde_json = "1"
log = "0.4"
ring = "0.16"
ed25519-dalek = "1"
uuid = { version = "0.8", features = ["serde", "v4"] }
chrono = { version = "0.4.11", features = ["serde"] }
lazy_static = "1"
tokio = { version = "0.2", features = ["full"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "blocking"] }

lurker_wallet_util = { path = "../util", version = "5.4.0-alpha.1" }
lurker_wallet_config = { path = "../config", version = "5.4.0-alpha.1" }
lurker_wallet_libwallet = { path = "../libwallet", version = "5.4.0-alpha.1" }

##### Grin Imports

# For Release
api_common = { path = "../../lurker/api_common" }
lurker_secp256k1zkp = { path = "../../lurker/secp" }
lurker_keychain = { path = "../../lurker/keychain" }
lurker_core = { path = "../../lurker/core" }
lurker_util = { path = "../../lurker/util" }
lurker_chain = { path = "../../lurker/chain" }
lurker_store = { path = "../../lurker/store" }

#####

[dev-dependencies]
"remove_dir_all" = "0.7"
