[package]
name = "lurker_integration"
version = "1.1.0"
authors = ["Grin Developers <mimblewimble@lists.launchpad.net>"]
description = "Simple, private and scalable cryptocurrency implementation based on the MimbleWimble chain format."
license = "Apache-2.0"
repository = "https://github.com/mimblewimble/grin"
keywords = [ "crypto", "grin", "mimblewimble" ]
workspace = ".."
edition = "2018"

[dependencies]
hyper = { version = "0.14", features = ["full"] }
futures = "0.1"
http = "0.1"
itertools = "0.7"
rand = "0.6.5"
serde = "1"
log = "0.4"
serde_derive = "1"
serde_json = "1"
chrono = "0.4.4"
tokio =  "0.1.11"
blake2-rfc = "0.2"
bufstream = "0.1"

#lurker_apiwallet = { path = "../wallet_api", version = "1.1.0" }
#lurker_libwallet = { path = "../libwallet", version = "1.1.0" }
#lurker_refwallet = { path = "../refwallet", version = "1.1.0" }
#lurker_wallet_config = { path = "../config", version = "1.1.0" }

#lurker_core = { git = "https://github.com/mimblewimble/grin", branch = "milestone/1.1.0" }
#lurker_keychain = { git = "https://github.com/mimblewimble/grin", branch = "milestone/1.1.0" }
#lurker_chain = { git = "https://github.com/mimblewimble/grin", branch = "milestone/1.1.0" }
#lurker_util = { git = "https://github.com/mimblewimble/grin", branch = "milestone/1.1.0" }
#lurker_api = { git = "https://github.com/mimblewimble/grin", branch = "milestone/1.1.0" }
#lurker_store = { git = "https://github.com/mimblewimble/grin", branch = "milestone/1.1.0" }
#lurker_p2p = { git = "https://github.com/mimblewimble/grin", branch = "milestone/1.1.0" }
#lurker_servers = { git = "https://github.com/mimblewimble/grin", branch = "milestone/1.1.0" }
