[package]
name = "lurker_wallet_libwallet"
version = "5.4.0-alpha.1"
authors = ["Grin Developers <mimblewimble@lists.launchpad.net>"]
description = "Simple, private and scalable cryptocurrency implementation based on the MimbleWimble chain format."
license = "Apache-2.0"
repository = "https://github.com/mimblewimble/lurker-wallet"
keywords = [ "crypto", "grin", "mimblewimble" ]
exclude = ["**/*.grin", "**/*.grin2"]
#build = "src/build/build.rs"
edition = "2018"

[dependencies]
blake2-rfc = "0.2"
rand = "0.6.5"
serde = "1"
serde_derive = "1"
serde_json = "1"
log = "0.4"
uuid = { version = "0.8", features = ["serde", "v4"] }
chrono = { version = "0.4.11", features = ["serde"] }
lazy_static = "1"
strum = "0.18"
strum_macros = "0.18"
thiserror = "1"
ed25519-dalek = "1.0.0-pre.4"
x25519-dalek = "0.6"
base64 = "0.9"
regex = "1.3"
sha2 = "0.10.0"
bs58 = "0.3"
age = "0.7"
curve25519-dalek = "2.1"
secrecy = "0.6"
bech32 = "0.7"
byteorder = "1.3"
num-bigint = "0.2"

#mwixnet onion
chacha20 = "0.8.1"
hmac = { version = "0.12.0", features = ["std"]}

lurker_wallet_util = { path = "../util", version = "5.4.0-alpha.1" }
lurker_wallet_config = { path = "../config", version = "5.4.0-alpha.1" }

##### Grin Imports

# For Release
lurker_core = { path = "../../lurker/core" }
lurker_keychain = { path = "../../lurker/keychain" }
lurker_util = { path = "../../lurker/util" }
lurker_store = { path = "../../lurker/store" }
tokio = { version = "1.47.1", features = ["full"] }
sodiumoxide = "0.2.7"
yggdrasilctl = { git = "https://github.com/jojapoppa/yggdrasilctl.git", branch = "main", version = "1.2.3", default-features = false, features = ["use_tokio"] }
bincode = "1.3.3"

##### 
